# loong_prac

.config/: .git-commit-template  git-local-config.sh
rust/: .clippy.toml  .rustfmt.toml  Cargo.toml
rust/hello_macro/: Cargo.toml
rust/hello_macro/hello_macro_derive/: Cargo.toml
rust/hello_macro/hello_macro_derive/src/: lib.rs
rust/hello_macro/src/: main.rs
rust/my_redis/: Cargo.toml
rust/my_redis/examples/: hello-redis.rs
rust/my_redis/src/: main.rs
rust/sunface-course/: Cargo.toml  run.sh
rust/sunface-course/hello/: main.rs
rust/sunface_course/: Cargo.toml  README.md  run.sh
rust/sunface_course/examples/complex_num/: main.rs
rust/sunface_course/examples/float/: main.rs
rust/sunface_course/examples/num11/: main.rs
rust/sunface_course/examples/penguin/: main.rs
rust/sunface_course/examples/traits1/: main.rs
rust/sunface_course/examples/traits2/: main.rs
rust/sunface_course/examples/traits3/: main.rs
rust/sunface_course/examples/traits4/: main.rs
rust/sunface_course/src/: lib.rs  main.rs
