[package]
name = "hello_macro"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
hello_macro_derive = { path = "./hello_macro_derive" }
