[package]
name = "sunface-course"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[dev-dependencies]

[dependencies]

[[example]]
name = "hello"
path = "examples/hello/main.rs"
