[package]
name = "hello_macro_derive"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
